<resources>
    <string name="app_name">AndroidAdvanced</string>
    <string name="activity_start_mode">Activity的生命周期和启动模式</string>
    <string name="ipc">IPC机制</string>
    <string name="study_note">读书笔记</string>
    <string name="start_non_full_activity">开启一个非全屏的Activity</string>
    <string name="start_config_changed">系统配置发生改变,activity重启</string>
    <string name="start_config_changed_not_reboot">系统配置发生改变,activity不重启</string>
    <string name="i_am_transparent">我是透明主题的界面</string>
    <string name="i_am_launch_mode">我是不同的启动模式</string>
    <string name="config_change"><![CDATA[让手机横竖屏，观察onSaveInstanceState和onRestoreInstanceState的调用顺序： onPause->onStop->onSaveInstanceState->onDestroy->onCreate->onStart->onRestoreInstanceState->onResume]]></string>
    <string name="config_change_not_reboot"><![CDATA[让手机横竖屏，观察onConfigurationChanged的调用顺序]]></string>
    <string name="launch_mode">启动模式</string>
    <string name="launch_mode_detail">启动模式分为四种：standard，singleTop，singleTask，singleInstance</string>
    <string name="intent_filter">IntentFilter的匹配规则</string>
    <string name="intent_filter_detail">action必须匹配；\n category可以多对多，但是规则要多于匹配category的个数；\n data类似于action，但是data的结构更复杂，包含URI和MimeType</string>
    <string name="no_activity">没有找到对应的Activity</string>
    <string name="launch_mode_single_action">单一action启动</string>
    <string name="launch_mode_more_category">多个category启动</string>
    <string name="launch_mode_single_data">单一data启动</string>
    <string name="launch_mode_toghter">action、data、category一起启动</string>
    <string name="launch_mode_pick_result_mothod">匹配结果判断，不然会报错</string>
</resources>
