<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start_by_intent_filter_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text"
        android:text="@string/launch_mode_single_action"/>
    <Button
        android:id="@+id/btn_start_by_intent_filter_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text"
        android:text="@string/launch_mode_more_category"/>
    <Button
        android:id="@+id/btn_start_by_intent_filter_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text"
        android:text="@string/launch_mode_single_data"/>
    <Button
        android:id="@+id/btn_start_by_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text"
        android:text="@string/launch_mode_toghter"/>
    <Button
        android:id="@+id/btn_start_by_pre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text"
        android:text="@string/launch_mode_pick_result_mothod"/>
    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_filter_detail" />
</LinearLayout>