<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start_non_full_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_non_full_activity" />
    <Button
        android:id="@+id/btn_config_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_config_changed" />
    <Button
        android:id="@+id/btn_config_change_not_reboot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_config_changed_not_reboot" />
</LinearLayout>